opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/sexp_grammar"
bug-reports: "https://github.com/janestreet/sexp_grammar/issues"
dev-repo: "git+https://github.com/janestreet/sexp_grammar.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/sexp_grammar/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async_rpc_kernel"
  "base"
  "core"
  "dedent"
  "parsexp_prefix"
  "ppx_bin_prot"
  "ppx_compare"
  "ppx_hash"
  "ppx_jane"
  "ppx_let"
  "ppx_sexp_conv"
  "ppx_sexp_message"
  "ppx_template"
  "dune"             {>= "3.17.0"}
  "ppxlib"           {= "0.33.0+ox"}
  "zarith"           {= "1.12+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Sexp grammar helpers"
description: "
Helpers for manipulating [Sexplib.Sexp_grammar] values.
"
