(library
 (name sexp_grammar_completion_test_helpers)
 (libraries async_kernel base.composition_infix core
   expect_test_helpers_core.expect_test_helpers_base packaged file_path
   parsexp parsexp_prefix sexp_grammar sexp_grammar_completion
   sexp_grammar_completion_protocol sexp_grammar_validation)
 (preprocess
  (pps ppx_jane)))
