(library
 (name sexp_grammar_completion_test)
 (libraries base base_quickcheck core_unix.command_test_helpers core
   expect_test_helpers_core.expect_test_helpers_base
   patdiff.expect_test_patdiff parsexp_prefix sexp_grammar
   sexp_grammar_completion sexp_grammar_completion_protocol
   sexp_grammar_completion_test_helpers)
 (preprocess
  (pps ppx_jane)))
